--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "onedisk-dashoard",
   "scripts": {
     "generate-styles": "sass styles:css --no-source-map",
-    "watch-styles": "sass styles:css --no-source-map --watch"
+    "watch-styles": "sass styles:css --no-source-map --watch",
+    "deploy-dashboard": "firebase deploy --only hosting:dashboard"
   }
 }
