Updated Colors and Layout Sizes
1. Refactored layout sizing breaking points to suit responsiveness.
2. Re-Added source mapping.
3. Using Single Font sizes.
4. Added Material Design font icons.

---- New Components ----

i. Added .sq-* (Square element).
ii. Updated bg-g-* (Using CSS4 Variables on Background gradients).

Other Styling & Updates.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "onedisk-dashoard",
   "scripts": {
-    "serve:styles": "sass styles:css --no-source-map --watch",
-    "build:styles": "sass styles:css --no-source-map",
-    "deploy": "npm run build:styles && firebase deploy --only hosting:dashboard"
+    "serve": "sass styles:css --watch",
+    "build": "sass styles:css",
+    "deploy": "npm run build && firebase deploy --only hosting:dashboard"
   }
 }
