Updated Fonts Library
- Added Fontawesome 5.2.0 -> 5.15.3
- Renamed variables.
- Added sidebar logo switching.
- Added dotted progress bar
- Other Stylings, Refactoring & Fixes.

--- a/.firebaserc
+++ b/.firebaserc
@@ -5,6 +5,9 @@
   "targets": {
     "vixcomx": {
       "hosting": {
+        "prod": [
+          "vixcomx"
+        ],
         "dashboard": [
           "vx-dashboard"
         ]
