--- a/firebase.json
+++ b/firebase.json
@@ -1,43 +1,53 @@
 {
-  "hosting": [{
-    "target": "prod",
-    "public": "./",
-    "ignore": [
-      "firebase.json",
-      "**/.git/**",
-      "**/node_modules/**"
-    ],
-    "appAssociation": "AUTO",
-    "rewrites": [{
-      "source": "**",
-      "destination": "/index.html"
-    }],
-    "headers": [{
-      "source": "**/*.@(eot|otf|ttf|ttc|woff)",
-      "headers": [{
-        "key": "Access-Control-Allow-Origin",
-        "value": "*"
-      }]
-    }]
-  }, {
-    "target": "dashboard",
-    "public": "./",
-    "ignore": [
-      "firebase.json",
-      "**/.git/**",
-      "**/node_modules/**"
-    ],
-    "appAssociation": "AUTO",
-    "rewrites": [{
-      "source": "**",
-      "destination": "/index.html"
-    }],
-    "headers": [{
-      "source": "**/*.@(eot|otf|ttf|ttc|woff)",
-      "headers": [{
-        "key": "Access-Control-Allow-Origin",
-        "value": "*"
-      }]
-    }]
-  }]
+  "hosting": [
+    {
+      "target": "prod",
+      "public": "./",
+      "ignore": [
+        "firebase.json",
+        "**/.git/**",
+        "**/node_modules/**"
+      ],
+      "appAssociation": "AUTO",
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    },
+    {
+      "target": "dashboard",
+      "public": "./",
+      "ignore": [
+        "**.map",
+        "firebase.json",
+        ".firebaserc",
+        "**/.git/**",
+        "**/node_modules/**"
+      ],
+      "appAssociation": "AUTO",
+      "rewrites": [
+        {
+          "source": "/styles/**",
+          "destination": "/error/index.html"
+        },
+        {
+          "source": "**",
+          "destination": "/error/index.html"
+        }
+      ],
+      "headers": [
+        {
+          "source": "**/*.@(eot|otf|ttf|ttc|woff)",
+          "headers": [
+            {
+              "key": "Access-Control-Allow-Origin",
+              "value": "*"
+            }
+          ]
+        }
+      ]
+    }
+  ]
 }
