Updated Layout Sizing
Merged sizes and breakpoints looper for a more dynamic sizing.
UPNEXT: Margin, Padding, Border & Border-Radius.

- Updated Progress component.
- Update Tabs state colors opacity.
- Added Github Action for firebase deployment.
- Other Stylings

--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,7 @@
       "ignore": [
         "firebase.json",
         "**/.git/**",
+        "**/.github/**",
         "**/node_modules/**"
       ],
       "appAssociation": "AUTO",
@@ -24,6 +25,7 @@
         "firebase.json",
         ".firebaserc",
         "**/.git/**",
+        "**/.github/**",
         "**/node_modules/**"
       ],
       "appAssociation": "AUTO",
