Updated Layout Sizing - Logic
Refactored layout sizing logic.

- Updated appmenu fullmenu styleing.
- Updated appmenu z-index to be suit each other.
- Groups sample views in /pages folder.
- Loading structural layouts before components
Other Stylings and Refactoring.

--- a/firebase.json
+++ b/firebase.json
@@ -32,11 +32,11 @@
       "rewrites": [
         {
           "source": "/styles{,/**}",
-          "destination": "/error/index.html"
+          "destination": "/pages/error/index.html"
         },
         {
           "source": "**",
-          "destination": "/error/index.html"
+          "destination": "/pages/error/index.html"
         }
       ],
       "headers": [
