--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@vixcom/ui",
   "version": "1.1.0",
   "scripts": {
-    "start": "http-server -P=http://127.0.0.1 dist -p=1400 -s --cors",
-    "serve": "sass src/styles:dist/css -w",
+    "start": "http-server -P=http://127.0.0.1 src -p=1400 -s --cors",
+    "serve": "sass src/styles:src/css -w",
     "build": "sass src/styles:dist/css",
     "preview": "npm run build && firebase serve --only hosting:dashboard --port=9000",
     "deploy": "npm run build && firebase deploy --only hosting:dashboard"
