--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "http-server": "^14.1.1",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "tailwindcss": "^3.2.7"
   }
 }
