--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vixcom/ui",
-  "version": "1.7.2",
+  "version": "1.7.3",
   "keywords": [
     "ui",
     "styling",
@@ -9,13 +9,17 @@
     "css",
     "html"
   ],
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
     "start": "http-server -P=http://127.0.0.1 src -p=1400 -s --cors",
     "serve": "sass src/styles:src/css -w",
-    "build": "sass src/styles:dist/css",
+    "build": "sass --no-source-map src/styles:dist/css",
     "preview": "npm run build && firebase serve --only hosting:dashboard --port=9000",
     "deploy": "npm run build && firebase deploy --only hosting:dashboard",
-    "publish": "npm run build && npm publish"
+    "prepare": "npm run build && cp -r src/{fonts,assets} package.json dist",
+    "publish": "npm publish"
   },
   "devDependencies": {
     "http-server": "^14.1.1",
